--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Sidebar Menu -->
         <div id="sidebar" class="sidebar">
           <ul>
-            <li><a href="#home"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="#home"><i class="fa fa-home"></i> البيت </a></li>
             <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
             <li><a href="#projects"><i class="fa fa-briefcase"></i> Projects</a></li>
             <li><a href="#contact"><i class="fa fa-envelope"></i> Contact</a></li>
@@ -226,3 +226,4 @@
 
     </body>
 </html>
+
