--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="logo"><a href="#">khaled</a></div>
 
              <ul>
-            <li><a href="#home"><i class="fa fa-home"></i> بيييييييييييييييييييييييييييييييييييي</a></li>
+            <li><a href="#home"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
             <li><a href="#projects"><i class="fa fa-briefcase"></i> Projects</a></li>
             <li><a href="#contact"><i class="fa fa-envelope"></i> Contact</a></li>
@@ -226,5 +226,6 @@
 
     </body>
 </html>
+
 
 
